--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ a {
 
 .main-container{
     width: 100%;
-    height: 100%;
     padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .article-container{
@@ -124,11 +124,14 @@ a {
 
 }
 
+.article-container > p{
+    font-family: 'Hind', sans-serif;
+}
+
 .footer{
     padding-top: 30px;
     background-color: rgba(33, 33, 33, 1);
     width: 100%;
-    height: 17%;
 }
 
 .contact-container{
@@ -137,4 +140,148 @@ a {
     color: rgba(255, 255, 255, 0.835);
     font-family: 'Hind', sans-serif;
 }
+
+/*####################PAGE 2############################*/
+
+.archives-container{
+    padding: 40px;
+    width: 50%;
+    height: 100%;
+    margin: auto;
+    background-color: rgb(243, 243, 243);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    row-gap: 30px;
+    column-gap: 30px;
+
+}
+
+.archives-article{
+    font-family: 'Hind', sans-serif;
+    flex-grow: 1;
+    background-color: white;
+
+    display: column;
+    width: 45%;
+   
+}
+
+.archives-article > p{
+    font-size: 13px;
+    text-align: justify;
+}
+
+.archives-article-banner-bitcoin{
+    
+    background-image: url("/img/archives_img/img_bitcoin.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 200px;
+  
+ 
+}
+.archives-article-banner-elonmusk{
+    background-image: url("/img/archives_img/img_elonmusj.webp");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 200px;
+}
+.archives-article-banner-quantumcomputing{
+    background-image: url("/img/archives_img/img_quantumcomputing.webp");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 200px;
+}
+.archives-article-banner-reram{
+    background-image: url("/img/archives_img/img_reram.jpg");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 200px;
+}
+.archives-article-banner-zuckerberg{
+    background-image: url("/img/archives_img/im_zuckerberg.jpg");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 200px;
+}
+
+.archives-article-banner-ai{
+    background-image: url("/img/archives_img/img_ai.webp");
+    background-size: cover;
+    background-position: center;
+
+    width: 100%;
+    height: 200px;
+}
+
+/*############# CONTACT ######################*/
+
+.weknowyou{
+    width: 50%;
+    margin: auto;
+    font-family: 'Hind', sans-serif;
+
+}
+
+.contactus-container{
+    width: 50%;
+    margin: auto;
+    font-family: 'Hind', sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    row-gap: 30px;
+
+    padding-top: 30px;
+
+}
+
+.contact{
+    display: flex;
+    column-gap: 30px;
+}
+
+.contact-marius-pic{
+    background-image: url("/img/contectus_img/marius.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 20%;
+    height: 150px;
+}
+.contact-talia-pic{
+    background-image: url("/img/contectus_img/talia.jpg");
+    background-size: cover;
+    background-position: center;
+    width: 20%;
+    height: 150px;
+}
+.contact-robert-pic{
+    background-image: url("/img/contectus_img/robert.enc");
+    background-size: cover;
+    background-position: center;
+    width: 20%;
+    height: 150px;
+}
+.contact-camille-pic{
+    background-image: url("/img/contectus_img/camille.enc");
+    background-size: cover;
+    background-position: center;
+    width: 20%;
+    height: 150px;
+}
+
+
+
 
