--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ a {
 
 .archives-article-banner-bitcoin{
     
-    background-image: url("/img/archives_img/img_bitcoin.jpg");
+    background-image: url("img/archives_img/img_bitcoin.jpg");
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -184,7 +184,7 @@ a {
  
 }
 .archives-article-banner-elonmusk{
-    background-image: url("/img/archives_img/img_elonmusj.webp");
+    background-image: url("img/archives_img/img_elonmusj.webp");
     background-size: cover;
     background-position: center;
 
@@ -192,7 +192,7 @@ a {
     height: 200px;
 }
 .archives-article-banner-quantumcomputing{
-    background-image: url("/img/archives_img/img_quantumcomputing.webp");
+    background-image: url("img/archives_img/img_quantumcomputing.webp");
     background-size: cover;
     background-position: center;
 
@@ -200,7 +200,7 @@ a {
     height: 200px;
 }
 .archives-article-banner-reram{
-    background-image: url("/img/archives_img/img_reram.jpg");
+    background-image: url("img/archives_img/img_reram.jpg");
     background-size: cover;
     background-position: center;
 
@@ -208,7 +208,7 @@ a {
     height: 200px;
 }
 .archives-article-banner-zuckerberg{
-    background-image: url("/img/archives_img/im_zuckerberg.jpg");
+    background-image: url("img/archives_img/im_zuckerberg.jpg");
     background-size: cover;
     background-position: center;
 
@@ -217,7 +217,7 @@ a {
 }
 
 .archives-article-banner-ai{
-    background-image: url("/img/archives_img/img_ai.webp");
+    background-image: url("img/archives_img/img_ai.webp");
     background-size: cover;
     background-position: center;
 
@@ -254,28 +254,28 @@ a {
 }
 
 .contact-marius-pic{
-    background-image: url("/img/contectus_img/marius.jpg");
+    background-image: url("img/contectus_img/marius.jpg");
     background-size: cover;
     background-position: center;
     width: 20%;
     height: 150px;
 }
 .contact-talia-pic{
-    background-image: url("/img/contectus_img/talia.jpg");
+    background-image: url("img/contectus_img/talia.jpg");
     background-size: cover;
     background-position: center;
     width: 20%;
     height: 150px;
 }
 .contact-robert-pic{
-    background-image: url("/img/contectus_img/robert.enc");
+    background-image: url("img/contectus_img/robert.enc");
     background-size: cover;
     background-position: center;
     width: 20%;
     height: 150px;
 }
 .contact-camille-pic{
-    background-image: url("/img/contectus_img/camille.enc");
+    background-image: url("img/contectus_img/camille.enc");
     background-size: cover;
     background-position: center;
     width: 20%;
