--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 html, body{
     width: 100%;
     height: 100%;
-    margin: 0;
+    margin: 0px;
 }
 
 .ahrefs{
-    
+  
     border-radius: 4px;
     padding-top: 3px;
     padding-bottom: 3px;
@@ -35,7 +35,7 @@ html, body{
 .banner-img{
     position: absolute;
     z-index: 1;
-    background-image: url("img/im_2.jpg");
+    background-image: url("img/internet.jpg");
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -157,6 +157,7 @@ html, body{
     width: 30%;
     min-width: 400px;
     height: 6%;
+    min-height: 50px;
 }
 
 
@@ -297,6 +298,15 @@ a {
 
 }
 
+.weknowyou > h3{
+    font-family: 'Lemon', serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 50px;
+    padding-top: 10px;
+    color: rgb(22, 22, 22);
+}
+
 @media all and (max-width : 500px){
 
     .article-container > h3{
@@ -308,6 +318,15 @@ a {
         padding-bottom: 10px;
         color: rgb(22, 22, 22);
     
+    }
+
+    .weknowyou > h3{
+        font-family: 'Lemon', serif;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 30px;
+        padding-top: 10px;
+        color: rgb(22, 22, 22);
     }
 }
 
@@ -340,17 +359,38 @@ a {
 
 
 .footer{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: rgba(33, 33, 33, 1);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: rgb(255, 255, 255);
+    height: 5%;
     width: 100%;
 }
 
 .contact-container{
+    z-index: 3;
+    display: flex;
+    column-gap: 20px;
     width: 50%;
     margin:auto;
-    color: rgba(255, 255, 255, 0.835);
+    color: rgb(9, 9, 9);
     font-family: 'Hind', sans-serif;
+}
+
+@media all and (max-width : 500px){
+    .contact-container{
+        z-index: 3;
+        display: flex;
+        column-gap: 20px;
+        width: 80%;
+        margin:auto;
+        color: rgb(9, 9, 9);
+        font-family: 'Hind', sans-serif;
+    }
+}
+
+.contact-container > img {
+    width: 35px;
+    height: 35px;
 }
 
 
@@ -576,10 +616,17 @@ a {
 /*############# CONTACT ######################*/
 
 .weknowyou{
-    padding-top: 30px;
     width: 50%;
     margin: auto;
     font-family: 'Hind', sans-serif;
+}
+
+@media all and (max-width : 500px){
+    .weknowyou{
+        width: 50%;
+        margin: auto;
+        font-family: 'Hind', sans-serif;
+    }
 }
 
 .contactus-container{
